<resources>
    <string name="app_name">Firebase Auth Google</string>

    <string name="loading">Loading…</string>
    <string name="edit_image">Edit Image</string>
    <string name="name">Name</string>
    <string name="mobile">Mobile</string>
    <string name="email">Email</string>
    <string name="date_of_birth">Date of Birth</string>
    <string name="gender">Gender</string>
    <string name="update_profile">Update Profile</string>
    <string name="update_email">Update Email</string>
    <string name="change_password">Change Password</string>
    <string name="delete_profile">Delete Profile</string>
    <string name="logout">LogOut</string>

    <string name="edit_profile">Edit Profile</string>
    <string name="edit_profile_image">Edit Profile Image</string>

    <string name="update_info">Update Info</string>
    <string name="full_name">Full Name*</string>
    <string name="enter_your_full_name">Enter your full name...</string>
    <string name="email_req">Email*</string>
    <string name="enter_your_email">Enter your email...</string>
    <string name="can_t_change_email_address">Can\'t change email address</string>
    <string name="date_of_birth_dd_mm_yyyy">Date of Birth (dd/mm/yyyy)*</string>
    <string name="dd_mm_yyyy">dd/mm/yyyy</string>
    <string name="mobile_country_code">Mobile* (+88)</string>
    <string name="enter_your_mobile_number">Enter your mobile number...</string>
    <string name="gender_req">Gender*</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="save">Save</string>
    <string name="save_image">Save Image</string>
    <string name="to_delete_your_account_permanently_and_delete_your_all_data_click_delete_account_button_now">To delete your account permanently and delete your all data click delete account button now</string>
</resources>